[gd_scene load_steps=14 format=3 uid="uid://dbjcwgms3fd78"]

[ext_resource type="Script" uid="uid://bulp4g77en3qf" path="res://Scripts/MenuScripts/selection_menu.gd" id="1_r2ge3"]
[ext_resource type="PackedScene" uid="uid://cf4j0nfjaajbe" path="res://Scenes/InGame/game_manager.tscn" id="2_atlk2"]
[ext_resource type="StyleBox" uid="uid://bhyxgbt3lvtl8" path="res://Resources/Overrides/Styles/button_style.tres" id="2_e1ouj"]
[ext_resource type="PackedScene" uid="uid://6mgfl26hy227" path="res://Scenes/Levels/level_1.tscn" id="2_e2lmm"]
[ext_resource type="PackedScene" uid="uid://b6r4jmpo85fr7" path="res://Scenes/Levels/level_2.tscn" id="3_bw2gc"]
[ext_resource type="Script" uid="uid://dajw61vh5kchp" path="res://Scripts/UnitScripts/unit_data.gd" id="4_547t1"]
[ext_resource type="Resource" uid="uid://dulep71up18jy" path="res://Resources/Data/ClassData/PlayerClassData/knight_data.tres" id="5_pr5gi"]
[ext_resource type="Resource" uid="uid://ckbg3nxtt1cky" path="res://Resources/Data/ClassData/PlayerClassData/priest_data.tres" id="6_hrbqk"]
[ext_resource type="PackedScene" uid="uid://bk7gw2ed0ldxc" path="res://Scenes/Menus/unit_selection_slot.tscn" id="7_hrbqk"]
[ext_resource type="StyleBox" uid="uid://bc0qkcohnagp" path="res://Resources/Overrides/Styles/label_style.tres" id="8_pr5gi"]
[ext_resource type="Resource" uid="uid://bqfoaj6jgi4aa" path="res://Resources/Data/ClassData/PlayerClassData/assassin_data.tres" id="8_wxrwb"]
[ext_resource type="LabelSettings" uid="uid://cmeaa4ys48qvb" path="res://Resources/Overrides/Settings/label_settings.tres" id="9_hrbqk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrbqk"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.0823529, 0.109804, 0.133333, 0.627451)

[node name="SelectionMenu" type="Control" node_paths=PackedStringArray("LevelSelectionContainer", "UnitCustomizationContainer", "StartLevelButton", "UnitInfoPanel", "NameLabel", "HPAttackLabel", "MoveRangeLabel", "AbilitiesLabel", "ActionsLabel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2ge3")
GameManagerScene = ExtResource("2_atlk2")
Level1Scene = ExtResource("2_e2lmm")
Level2Scene = ExtResource("3_bw2gc")
LevelSelectionContainer = NodePath("MarginContainer/VBoxContainer/LevelSelectionContainer")
UnitCustomizationContainer = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitCustomizationContainer")
StartLevelButton = NodePath("MarginContainer/VBoxContainer/StartLevelButton")
UnitInfoPanel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer")
NameLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/NameLabel")
HPAttackLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/HPAttackLabel")
MoveRangeLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/MoveRangeLabel")
AbilitiesLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/AbilitiesLabel")
ActionsLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/ActionsLabel")
UnitSelectionSlotScene = ExtResource("7_hrbqk")
PlayerClasses = Array[ExtResource("4_547t1")]([ExtResource("5_pr5gi"), ExtResource("6_hrbqk"), ExtResource("8_wxrwb")])

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.144052, 0.186156, 0.219676, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelSelectionContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Level1Button" type="Button" parent="MarginContainer/VBoxContainer/LevelSelectionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = ExtResource("2_e1ouj")
theme_override_styles/normal = ExtResource("2_e1ouj")
text = " Level 1 "

[node name="Level2Button" type="Button" parent="MarginContainer/VBoxContainer/LevelSelectionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = ExtResource("2_e1ouj")
theme_override_styles/normal = ExtResource("2_e1ouj")
text = " Level 2 "

[node name="MainContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitCustomizationContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContentContainer"]
layout_mode = 2

[node name="UnitInfoPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContentContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hrbqk")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("8_pr5gi")
label_settings = ExtResource("9_hrbqk")

[node name="HPAttackLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("8_pr5gi")
label_settings = ExtResource("9_hrbqk")

[node name="MoveRangeLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("8_pr5gi")
label_settings = ExtResource("9_hrbqk")

[node name="AbilitiesLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("8_pr5gi")
label_settings = ExtResource("9_hrbqk")
autowrap_mode = 2

[node name="ActionsLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("8_pr5gi")
label_settings = ExtResource("9_hrbqk")
autowrap_mode = 2

[node name="StartLevelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/disabled = ExtResource("2_e1ouj")
theme_override_styles/normal = ExtResource("2_e1ouj")
text = "Start Level"

[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelectionContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelectionContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartLevelButton" to="." method="_on_start_level_button_pressed"]
